# xvulnhuntr

./: .gitignore  Dockerfile.multilanguage  Dockerfile.pythonlanguage  README.md  pyproject.toml
codeExtractor/c#/: Program.cs  README.md
codeExtractor/go/: README.md  codeExtractor.go
codeExtractor/java/: README.md  example.java  pom.xml
prompts/go/: go_routine_leak.txt
tests/c#/BloodBankManagementSystem/mock_responses/1741769032/: 1741769032593  1741769032612  1741769032621_SQLI  1741769033096_SQLI  1741769033424_SQLI  1741769034051_SQLI  1741769034056_LFI  1741769034342_LFI  1741769034647_LFI  1741769035280_LFI  1741769035548_LFI
tests/go/go-webapp-sample-master/mock_responses/1742400550/: 1742400556803  1742400567638  1742400582820_LFI  1742400593924_LFI  1742400605005_LFI  1742400617907_LFI  1742400631931_LFI  1742400644641_LFI  1742400654361_LFI  1742400686218_SQLI  1742400708491_SQLI  1742400730744_SQLI  1742400744835_SQLI  1742400755731_SQLI  1742400764881_SQLI
tests/java/OnlineTripManagementSystemApp-main/mock_responses/1742467377/: 1742467384576  1742467397954  1742467409369_IDOR  1742467429906_IDOR  1742467446550_IDOR  1742467460070_IDOR  1742467476569_IDOR  1742467488753_XSS  1742467509979_XSS  1742467526128_XSS  1742467538508_XSS  1742467551158_XSS  1742467567107  1742467581131_IDOR  1742467601337_IDOR  1742467618352_IDOR  1742467633158_IDOR  1742467647816_IDOR  1742467662892  1742467675898_IDOR  1742467696253_IDOR  (+98 more)
vulnhuntr/: LLMs.py  __main__.py  data_model.py  enums.py  languages.py  logger.py  mocks.py  prompts.py  symbol_finder.py  utils.py
(+1 files in other folders)
