[tool.poetry]
name = "xvulnhuntr"
version = "0.1.0"
description = ""
authors = ["Dan <dan@protectai.com>", "Marcello <marcello@protectai.com>"]
readme = "README.md"

[tool.poetry.scripts]
xvulnhuntr = 'vulnhuntr.__main__:parse_params'

[[tool.poetry.packages]]
# Map the package name 'xvulnhuntr' to the existing folder 'vulnhuntr'
include = "vulnhuntr"
from = "."

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.7.1"
pydantic-xml = "^2.11.0"
pydantic = "^2.8.0"
anthropic = "^0.49.0"
structlog = "^24.2.0"
jedi = "0.18.0"
parso = "0.8.0"
openai = "^1.51.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
